# potential-succotash

./: .gitignore  AI_Extensions_Register.csv  AI_MASTER_CHARTER.md  AI_Protocols_Register.csv  Architectural_Laws_Register.csv  CNAME  COMMERCIAL.md  CONTRIBUTING.md  CallMarketplaceSpec_v1.json  Organism_Marketplace_Register.csv  README.md  VIGIL_DOWNLOADS.md  build-desktop.bat  build-extensions.sh  dfx.json  docker-compose.yml  download.html  index.html  install-extensions.ps1  install-jarvis-chrome.bat  install-jarvis-edge.bat  install-jarvis.bat  install-organism.bat  install-organism.sh  install-vigil-edge.bat  install.sh  package.json
architecture/: model-face-split.md  system-overview.md  token-economy-architecture.md  value-capture-architecture.md
defense-organism/: README.md
desktop/: chrome-shim.js  main.js  package.json  preload.js
docker/: Dockerfile.node  Dockerfile.python  Dockerfile.zig
docs/: NOVA_ARCHITECTURE.md  VIGIL_4B.md  architecture-map.md  build-report.md  deps-data.json  (+29 more)
github-mcp-server-python/: .env.example  README.md  pyproject.toml
github-mcp-server-python/src/github_mcp/: app.py  client.py  constants.py  server.py
github-mcp-server-python/src/github_mcp/tools/: __init__.py  branches.py  commits.py  files.py  pulls.py  repos.py
organism/cpp/: CMakeLists.txt  README.md
organism/cpp/include/: organism.h
organism/cpp/src/: main.cpp  organism.cpp
organism/python/: README.md  pyproject.toml
organism/python/organism/: __init__.py  __main__.py  constants.py  heartbeat.py  kernel.py  resonance.py  sensor.py  state.py  vitality.py
(+1133 files in other folders)
