[project]
name = "github-mcp-server"
version = "1.0.0"
description = "MCP server for GitHub repo, file, branch, commit, and pull request operations (read + write)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.scripts]
github-mcp-server = "github_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
